# rabbitmq-example

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  rabbitmq_sample.code-workspace  run_analysis.sh  sonar-project-template.properties
src/rabbitmq_example/: __about__.py  __init__.py  consumer.py  producer.py
tests/: __init__.py  test_consumer.py  test_producer.py
